# vynil

./: .dockerignore  .gitignore  .yamllint.yaml  CONTRIBUTORS  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  Taskfile.yml  llms.txt  mkdocs.yml  requirements-docs.txt
agent/: Cargo.toml  Dockerfile  parent.toml  providers.tf
agent/scripts/boxes/: scan.rhai
agent/scripts/lib/: apps.rhai  backup_context.rhai  build_context.rhai  copy_dir.rhai  gen_package.rhai  install_from_dir.rhai  package_yaml.rhai  resolv_service.rhai  scan_gitlab.rhai  scan_harbor.rhai  secret_dockerconfigjson.rhai  storage_class_enrich.rhai  storage_class_selector.rhai  tofu.rhai  tofu_gen.rhai  wait.rhai
agent/scripts/service/: backup.rhai  backup_prepare_mysql.rhai  backup_prepare_secret.rhai  context.rhai  context_service.rhai  delete.rhai  delete_backup.rhai  delete_befores.rhai  delete_crds.rhai  delete_scalables.rhai  delete_tofu.rhai  delete_vitals.rhai  init_from.rhai  install.rhai  install_befores.rhai  install_crds.rhai  install_others.rhai  install_posts.rhai  install_scalables.rhai  install_vitals.rhai  restore.rhai  restore_run.rhai  schedule_backup.rhai  template.rhai  template_others.rhai  template_posts.rhai  template_scalables.rhai  template_vitals.rhai
agent/scripts/system/: context.rhai  delete.rhai  delete_crds.rhai  delete_systems.rhai  delete_tofu.rhai  install.rhai  install_crds.rhai  install_systems.rhai  install_tofu.rhai  template.rhai  template_crds.rhai  template_systems.rhai
agent/scripts/tenant/: backup.rhai  backup_check.rhai  backup_init.rhai  backup_prepare_mongodb.rhai  backup_prepare_postgresql.rhai  backup_prepare_redis.rhai  backup_prune.rhai  backup_run.rhai  context.rhai  context_tenant.rhai  delete.rhai  delete_backup.rhai  delete_befores.rhai  delete_others.rhai  delete_posts.rhai  delete_scalables.rhai  delete_vitals.rhai  init_from.rhai  install.rhai  install_befores.rhai  install_others.rhai  install_posts.rhai  install_scalables.rhai  install_tofu.rhai  install_vitals.rhai  maintenance_start.rhai  maintenance_stop.rhai  restore.rhai  restore_mongodb.rhai  restore_mysql.rhai  restore_postgresql.rhai  restore_redis.rhai  restore_run.rhai  restore_secret.rhai  schedule_backup.rhai  template.rhai  template_befores.rhai
agent/src/: clone.rs  crdgen.rs  destroy.rs  install.rs  lib.rs  main.rs  plan.rs  run.rs  template.rs  version.rs
agent/src/boxes/: file_scan.rs  mod.rs  scan.rs
agent/src/linting/: config.rs  hbs_checker.rs  mod.rs  rhai_checker.rs
agent/src/package/: build.rs  lint.rs  mod.rs  test.rs  unpack.rs  update.rs  validate.rs
agent/src/service/: backup.rs  delete.rs  install.rs  mod.rs  reconfigure.rs  restore.rs
agent/src/system/: delete.rs  install.rs  mod.rs
agent/src/template/: mod.rs  service.rs  system.rs  tenant.rs
agent/src/tenant/: backup.rs  delete.rs  install.rs  mod.rs  reconfigure.rs  restore.rs
agent/src/testing/: handler.rs  mod.rs  result.rs  vyniltest.rs  vyniltestset.rs
agent/templates/: backup.yaml.hbs  cronbackup.yaml.hbs  init_job.yaml.hbs  manualbackup.yaml.hbs  restore.yaml.hbs
agent/tests/: lint_package.rs  rhai_backup_redis.rs  rhai_build.rs  rhai_copy_dir.rs  rhai_lib.rs  rhai_lifecycle.rs  rhai_scan.rs  rhai_scan_file.rs  rhai_scan_gitlab.rs  rhai_scan_http.rs  rhai_tofu_gen.rs
agent/tests/fixtures/gen_package/: service_configmap.yaml  service_deployment.yaml
agent/tests/fixtures/package/: package.yaml
agent/tests/sample/: package.yaml  values.yml
agent/tests/sample/get_crds/: accesscontrolpolicies.hub.traefik.io.yaml  aiservices.hub.traefik.io.yaml  apiauths.hub.traefik.io.yaml  apibundles.hub.traefik.io.yaml  apicatalogitems.hub.traefik.io.yaml  apiplans.hub.traefik.io.yaml  apiportalauths.hub.traefik.io.yaml  apiportals.hub.traefik.io.yaml  apiratelimits.hub.traefik.io.yaml  apis.hub.traefik.io.yaml  apiversions.hub.traefik.io.yaml  contentitems.hub.traefik.io.yaml  ingressroutes.traefik.io.yaml  ingressroutetcps.traefik.io.yaml  ingressrouteudps.traefik.io.yaml  managedapplications.hub.traefik.io.yaml  managedsubscriptions.hub.traefik.io.yaml  middlewares.traefik.io.yaml  (+7 more)
common/: Cargo.toml
common/src/: chronohandler.rs  context.rs  ed25519handler.rs  globhandler.rs  handlebarshandler.rs  hasheshandlers.rs  httphandler.rs  httpmock.rs  instance_macros.rs  instanceservice.rs  instancesystem.rs  instancetenant.rs  jukebox.rs  jukebox_file.rs  k8sgeneric.rs  k8smock.rs  k8sraw.rs  k8sworkload.rs  lib.rs  ocihandler.rs  passwordhandler.rs  rhaihandler.rs  s3handler.rs  semverhandler.rs  shellhandler.rs  tools.rs  ttl_cache.rs  vynilpackage.rs  vyniltest.rs  vyniltestset.rs  yamlhandler.rs
core/: Cargo.toml  README.md
core/src/: chrono.rs  engine.rs  glob.rs  hashes.rs  hbs.rs  http.rs  k8s.rs  k8s_mock.rs  key.rs  lib.rs  oci.rs  oci_mock.rs  password.rs  s3.rs  semver.rs  shell.rs  yaml.rs
k8s/: Cargo.toml
k8s/src/: clusterissuers.rs  distrib.rs  events.rs  handlers.rs  install.rs  lib.rs  tenants.rs  yaml.rs
kubectl-vynil/: Cargo.toml
kubectl-vynil/src/: actions.rs  bundle.rs  cli.rs  items.rs  lib.rs  main.rs  transport.rs
operator/: Cargo.toml  Dockerfile  parent.toml
operator/scripts/boxes/: delete.rhai  install.rhai
operator/scripts/system/: delete.rhai  install.rhai
operator/scripts/tenant/: delete.rhai  install.rhai
operator/src/: crdgen.rs  cronjobs.rs  distrib.rs  events.rs  install.rs  instance_common.rs  instanceservice.rs  instancesystem.rs  instancetenant.rs  jobs.rs  jukebox.rs  lib.rs  main.rs  manager.rs  metrics.rs  pvc.rs  secrets.rs  telemetry.rs
operator/templates/: cronscan.yaml.hbs  package.yaml.hbs  scan.yaml.hbs
package/: Cargo.toml
package/src/: http_script.rs  k8s_script.rs  lib.rs  pkg_script.rs  script.rs  shell.rs  template.rs  terraform.rs  yaml.rs
server/: Cargo.toml  Dockerfile  parent.toml
server/src/: anonymize.rs  auth.rs  authz.rs  config.rs  discovery.rs  dto.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
server/src/collect/: children.rs  clusterinfo.rs  logs.rs  mod.rs  packages.rs  state.rs  vynilconfig.rs
(+122 files in other folders)
