[package]
name = "vynil"
version = "0.1.0"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
license = "	BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "agent",
    "dist",
    "operator",
    "package",
    "k8s",
]
default-members = [
    "agent",
    "dist",
    "operator",
]
