[workspace]
resolver = "1"
members = [
    "agent",
    "operator",
    "common",
    "core",
    "server",
    "kubectl-vynil",
]
default-members = [
    "agent",
    "server",
    "operator",
]

[workspace.dependencies]
kube = { version = "3.1.0", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.28.0", features = ["latest", "schemars"], default-features = false }
tracing = "0.1.37"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.150"
rust-yaml = { git = "https://github.com/sebt3/rust-yaml", branch = "main" }
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.38", features = ["serde"] }
schemars = { version = "1.0", features = ["chrono04"] }
actix-web = "4.12.1"
base64 = "0.22.1"

[workspace.package]
version = "0.7.8-alpha.4"
authors = [
    "Sébastien Huss <sebastien.huss@gmail.com>",
    "Xavier Mortelette <reivaxm@gmail.com>"
]
edition = "2024"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "vynil"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[profile.release]
strip = true

# use "cargo install cargo-commander", then "cargo cmd generate"
[package.metadata.commands]
generate_crd = { cmd=[
    "cargo run --bin agent -- crdgen > box/vynil/crds/crd.yaml",
    "cp box/vynil/crds/crd.yaml deploy/crd/crd.yaml",
]}
generate = { cmd=[
    "cargo cmd generate_crd",
    "awk 'BEGIN{p=1}/profile.release/{p=0}p==1&&!/\"operator\",/&&!/\"server\",/&&!/\"kubectl-vynil\",/'<Cargo.toml>agent/parent.toml",
    "awk 'BEGIN{p=1}/profile.release/{p=0}p==1&&!/\"agent\",/&&!/\"server\",/&&!/\"kubectl-vynil\",/'<Cargo.toml>operator/parent.toml",
    "awk 'BEGIN{p=1}/profile.release/{p=0}p==1&&!/\"agent\",/&&!/\"operator\",/&&!/\"kubectl-vynil\",/'<Cargo.toml>server/parent.toml",
]}
crd = { cmd=[
    "cargo cmd generate_crd",
    "kubectl apply -f box/vynil/crds/crd.yaml"
]}
fmt = { cmd=[
    "cargo +nightly fmt"
]}
precommit = { cmd=[
    "cargo update",
    "cargo clippy --fix --allow-dirty --allow-staged",
    "cargo cmd generate",
    "cargo +nightly fmt",
    "cargo test"
]}
agent-dev = { cmd=[
    "podman build . -f agent/Dockerfile -t docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version)-dev && podman push docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version)-dev",
]}
agent = { cmd=[
    "podman build . -f agent/Dockerfile -t docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version) && podman push docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version)",
]}
agentbeta = { cmd=[
    "podman build . -f agent/Dockerfile -t docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version)-beta && podman push docker.io/sebt3/vynil-agent:$(cargo run --bin agent -- version)-beta",
]}
operator = { cmd=[
    "podman build . -f operator/Dockerfile -t docker.io/sebt3/vynil-operator:$(cargo run --bin agent -- version) && podman push docker.io/sebt3/vynil-operator:$(cargo run --bin agent -- version)",
]}
operatorbeta = { cmd=[
    "podman build . -f operator/Dockerfile -t docker.io/sebt3/vynil-operator:$(cargo run --bin agent -- version)-beta && podman push docker.io/sebt3/vynil-operator:$(cargo run --bin agent -- version)-beta",
]}
server = { cmd=[
    "podman build . -f server/Dockerfile -t docker.io/sebt3/vynil-server:$(cargo run --bin agent -- version) && podman push docker.io/sebt3/vynil-server:$(cargo run --bin agent -- version)",
]}
serverbeta = { cmd=[
    "podman build . -f server/Dockerfile -t docker.io/sebt3/vynil-server:$(cargo run --bin agent -- version)-beta && podman push docker.io/sebt3/vynil-server:$(cargo run --bin agent -- version)-beta",
]}
update_box = { cmd=[
    "cargo run --bin agent -- package update --source ./box/vynil/",
    "cargo run --bin agent -- package build -o ./box/vynil/ --tag $(cargo run --bin agent -- version) -r docker.io -n sebt3/vynil -u $(jq -r '.auths[\"docker.io\"].auth' </run/user/$(id -u)/containers/auth.json |base64 -d|awk -F: '{print $1}') -p $(jq -r '.auths[\"docker.io\"].auth' </run/user/$(id -u)/containers/auth.json |base64 -d|awk -F: '{print $2}')",
]}
box = { cmd=[
    "cargo run --bin agent -- package build -o ./box/vynil/ --tag $(cargo run --bin agent -- version) -r docker.io -n sebt3/vynil -u $(jq -r '.auths[\"docker.io\"].auth' </run/user/$(id -u)/containers/auth.json |base64 -d|awk -F: '{print $1}') -p $(jq -r '.auths[\"docker.io\"].auth' </run/user/$(id -u)/containers/auth.json |base64 -d|awk -F: '{print $2}')",
]}
