[package]
name = "agent"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
common = { path = "../common" }
clap = { version = "4.1.8", features = ["derive", "env"] }
env_logger = "0.11.5"


[[bin]]
doc = false
name = "agent"
path = "src/main.rs"

[lib]
name = "client"
path = "src/lib.rs"
