[package]
name = "common"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
schemars.workspace = true
actix-web.workspace = true
base64.workspace = true
thiserror = "1.0.65"
handlebars = { version = "5.1.2", features = ["script_helper", "string_helpers"] }
handlebars_misc_helpers = { version = "0.16.3", features = ["string", "json", "jsonnet", "regex", "uuid"] }
rhai = { version = "1.18.0", features = ["sync", "serde"] }
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
rand = "0.8.5"
lazy_static = "1.5.0"
regex = "1.11.0"
semver = { version = "1.0.23", features = ["serde"] }
tar = "0.4.42"
flate2 = "1.0.33"
oci-client = "0.12.1"
openapiv3 = "2.0.0"
sha256 = "1.5.0"

[lib]
name = "common"
path = "src/lib.rs"
