[package]
name = "common"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
schemars.workspace = true
actix-web.workspace = true
base64.workspace = true
thiserror = "2.0.3"
handlebars = { version = "6.2.0", features = ["script_helper", "string_helpers"] }
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "json", "jsonnet", "regex", "uuid"] }
rhai = { version = "1.20.0", features = ["sync", "serde", "internals"] }
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
rand = "0.9.1"
lazy_static = "1.5.0"
regex = "1.11.1"
semver = { version = "1.0.24", features = ["serde"] }
tar = "0.4.43"
flate2 = "1.0.33"
oci-client = "0.14.0"
openapiv3 = "2.0.0"
sha256 = "1.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
bcrypt = "0.17.0"
crc32fast = "1.4.2"
url = "2.5.4"

[lib]
name = "common"
path = "src/lib.rs"
