[package]
name = "common"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-yaml.workspace = true
serde_yaml.workspace = true
indexmap = "2"
tokio.workspace = true
chrono.workspace = true
schemars.workspace = true
actix-web.workspace = true
base64.workspace = true
thiserror = "2.0.3"
handlebars = { version = "6.2.0", features = ["script_helper", "string_helpers"] }
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "json", "jsonnet", "regex", "uuid"] }
rhai = { version = "1.20.0", features = ["sync", "serde", "internals"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
rand = "0.9.0"
lazy_static = "1.5.0"
regex = "1.12.2"
semver = { version = "1.0.24", features = ["serde"] }
tar = "0.4.43"
flate2 = "1.1.4"
oci-client = "0.15.0"
openapiv3 = "2.0.0"
sha256 = "1.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
bcrypt = "0.17.1"
crc32fast = "1.5.0"
url = "2.5.4"
http = "1.1.0"
#openssl = "0.10.73"
#ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
#rnd8 = { package = "rand", version = "0.8.5" }

[lib]
name = "common"
path = "src/lib.rs"
