[package]
name = "vynil-core"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
k8s = ["dep:kube", "dep:k8s-openapi", "dep:futures"]
oci = ["dep:oci-client"]
s3 = ["dep:object_store", "dep:futures"]

[dependencies]
rhai = { version = "1.20.0", features = ["sync", "serde", "internals"] }
handlebars = { version = "6.2.0", features = ["script_helper", "string_helpers"] }
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "json", "jsonnet", "regex", "uuid"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
chrono.workspace = true
base64.workspace = true
thiserror = "2.0.3"
tracing.workspace = true
sha256 = "1.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
bcrypt = "0.19.2"
crc32fast = "1.5.0"
semver = { version = "1.0.24", features = ["serde"] }
url = "2.5.4"
regex = "1.12.2"
wildmatch = "2.6.1"
openssl = "0.10.73"
http = "1.1.0"
lazy_static = "1.5.0"
rand = "0.10.1"
schemars.workspace = true
actix-web.workspace = true
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
oci-client = { version = "0.15.0", optional = true }
object_store = { version = "0.11", features = ["aws"], optional = true }
flate2 = "1.1.4"
tar = "0.4.46"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tower-test = "0.4.0"

[lib]
name = "vynil_core"
path = "src/lib.rs"
