[package]
name = "k8s"
version = "0.2.1"
edition = "2021"
license = "	BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package = { path = "../package" }
schemars = { version = "0.8.11", features = ["chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
k8s-openapi = { version = "0.21.0", features = ["latest"], default-features = false }
chrono = "0.4.24"
anyhow = "1.0.70"
sha256 = "1.1.2"

[dependencies.kube]
default-features = false
features = ["runtime", "client", "derive", "openssl-tls"]
version = "0.90.0"

[lib]
name = "k8s"
path = "src/lib.rs"
