[package]
name = "k8s"
version = "0.2.9"
edition = "2021"
license = "	BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.11", features = ["chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.17"
openapiv3 = "1.0.2"
k8s-openapi = { version = "0.21.0", features = ["latest"], default-features = false }
chrono = "0.4.24"
anyhow = "1.0.70"
sha256 = "1.1.2"
log = "0.4.17"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.90.0"

[lib]
name = "k8s"
path = "src/lib.rs"
