[package]
name = "kubectl-vynil"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kubectl-vynil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Pure-rustls (no openssl): keeps the client binary portable (static-friendly, no libssl at
# runtime) and avoids cross-compiling openssl for the aarch64 release build.
kube = { version = "3.1.0", default-features = false, features = ["client", "rustls-tls"] }
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
rustls = { version = "0.23", features = ["ring"] }
# Not used directly, but `kube` pulls k8s-openapi which requires the final crate to pin a
# version feature — otherwise `cargo test -p kubectl-vynil` alone fails to build.
k8s-openapi = { workspace = true, features = ["latest"] }

[dev-dependencies]
