[package]
name = "operator"
version = "0.2.13"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
default-run = "operator"
license = "	BSD-3-Clause"
publish = false

[[bin]]
doc = false
name = "operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
package = { path = "../package" }
k8s = { path = "../k8s" }
actix-web = "4.9.0"
futures = "0.3.28"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.22.0", features = ["latest"], default-features = false }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"], optional = true }
tonic = { version = "0.9", optional = true }
thiserror = "1.0.37"
async-trait = "0.1.68"
either = "1.8.1"
base64 = "0.22.1"
json-patch =  {version = "=1.2.0"}
rhai = { version = "1.18.0", features = ["sync", "serde"] }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.91.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube-rs.git"
#rev = "8dcd5c0865ad0a40520519032119fbe4ea5f85f7"
#path = "../kube-rs/kube"
