[package]
name = "operator"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
doc = false
name = "operator"
path = "src/main.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
schemars.workspace = true
actix-web.workspace = true
base64.workspace = true
common = { path = "../common" }
futures = "0.3.28"
prometheus-client = "0.23.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["tokio"], optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tonic = { version = "0.14", optional = true }
async-trait = "0.1.68"
either = "1.8.1"
json-patch =  {version = "=4.1.0"}

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube-rs.git"
#rev = "8dcd5c0865ad0a40520519032119fbe4ea5f85f7"
#path = "../kube-rs/kube"
