[package]
name = "package"
version = "0.2.9"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
license = "	BSD-3-Clause"

[dependencies]
k8s = { path = "../k8s" }
anyhow = "1.0.69"
rhai = { version = "1.12.0", features = ["sync", "serde"] }
serde =  { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
regex = "1.7.3"
futures = "0.3.25"
indexmap = "1.9.3"
serde_json = "1.0.95"
handlebars = "4.3.6"
schemars = { version = "0.8.11", features = ["chrono"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

[lib]
name = "package"
path = "src/lib.rs"
