[package]
name = "package"
version = "0.2.13"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
license = "	BSD-3-Clause"

[dependencies]
k8s = { path = "../k8s" }
anyhow = "1.0.89"
rhai = { version = "1.18.0", features = ["sync", "serde"] }
serde =  { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tracing = "0.1.37"
regex = "1.7.3"
futures = "0.3.25"
indexmap = "2.6.0"
serde_json = "1.0.132"
handlebars = "6.0.0"
indent = "0.1.1"
schemars = { version = "0.8.11", features = ["chrono"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
reqwest = "0.12.4"

[lib]
name = "package"
path = "src/lib.rs"
