[package]
name = "server"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
base64 = "0.22"
thiserror = "2"
async-trait = "0.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
